# Fast-Social

./: .gitignore  frontend.py  pyproject.toml
app/: app.py  auth.py  config.py  database.py  models.py  schemas.py
app/routers/: images.py  posts.py  users.py
